# spreadsheet-to-pdf

./: approach_native_excel.py  approach_pandas.py  main.py  pyproject.toml
